--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,10 @@
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 1rem;
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  margin-left: 0;
 }
 
 .searchContainer {
@@ -20,6 +24,8 @@
   gap: 0.5rem;
   margin-bottom: 1rem;
   width: 100%;
+  position: relative;
+  z-index: 2;
 }
 
 .input {
